--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,400&display=swap');
 
+html {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #0c0a09;
     color: #fff;
@@ -16,25 +20,31 @@ section {
     padding: 1rem;
 }
 
-.hidden {
+.fade-in {
     opacity: 0;
     filter: blur(10px);
     transform: translateX(-50px);
     transition: all .6s ease-out;
 }
 
-.hidden:nth-child(2) {
+.fade-in:nth-child(2) {
     transition-delay: .3s;
 }
 
 @media(prefers-reduced-motion) {
-    .hidden {
+    .fade-in {
        transition: none;
     }
 }
 
-.show {
+.active {
     filter: blur(0);
     transform: translateX(0);
     opacity: 1;
+}
+
+.progress-bar__wrapper {
+    display: flex;
+	width: 100%;
+	position: relative;
 }
